# dbt-metricflow-showcase

./: .gitignore  .user.yml  README.md  dbt_project.yml  pyproject.toml  setup.sh
analyses/: customer_cohort_analysis.sql
macros/: cents_to_dollars.sql
models/marts/core/: _core_models.yml  dim_customers.sql  fct_orders.sql  metricflow_time_spine.sql
models/marts/finance/: _finance_models.yml  fct_mrr.sql  fct_payments.sql
models/staging/: _sources.yml  _stg_models.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
semantic_models/: _semantic_customers.yml  _semantic_orders.yml  _semantic_payments.yml
snapshots/: orders_snapshot.sql
tests/: assert_customer_lifetime_value_non_negative.sql  assert_positive_order_amounts.sql
