[project]
name = "dbt-metricflow-showcase"
version = "0.1.0"
description = "Sample dbt project showcasing the MetricFlow semantic layer"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.10.0,<1.11.0",
    "dbt-duckdb>=1.10.0,<1.11.0",
    "dbt-metricflow>=0.10",
]

[tool.uv]
package = false
